22/11/15
  Fix for window not unmapping when client_to_desktop used

21/11/15
  Added reserved CMD in key.conf, barrtclickcmd, for right clicking 
  the bar to run a command

16/11/15
  Added man page

13/11/15
  Change modifyer key ALTSuper to AltSuper for
   consistentcy
  In rc.conf one value for defaultmode will set all
   desktops to that mode

19/9/15
  No useless gaps in fullscreen mode

13/8/15
  Fix for window unmapping error with multiple screens

10/8/15
  Fix for xsetroot failing

17/7/15
  Fix for floating windows mapping off screen

14/7/15
  Fix for clicking on the focused desktop in the
   switcher with no open windows killing the wm

13/7/15
  Fix for floating window not mapped on focused desktop
   on unfocused screen

12/7/15
  Fix floating window mapping order

10/7/15
  Fix for remove_window mapping error
  Fix for client_to_desktop mapping error

8/7/15
  Added keyboard shortcut to pop a window out from the
   tiles
  Added option in apps.conf to match window to be popped
   on opening
  Added option in the rc.conf to have useless gaps around
   the bar

7/7/15
  Reworked change_desktop()
  Fix for transient windows not being focused when clicked
   on
  Reworked how transient windows are handled
  Fixed window visibilty in fullscreen mode

5/7/15
  Reworked maprequest()

22/6/15
  init_desks in update_config so room for bar not used
   on not barmon

18/6/15
  Fix for bar not working on monitor 2
  Default SHOW_BAR to 0 in rc

17/6/15
  Fix for transient child window not being placed on
   desktop with parent if other desktop is focused
  Fix for occasional crash 'cause don't xfree after return!

30/5/15
  Added useless gaps to the three tiling modes

28/5/15
  Don't take bar height of screen height if show_bar == 1

23/5/15
  Fix for bar not starting on the right monitor
  Added option in rc file to set SHOW_BAR for each
   desktop like DEFAULTMODE

24/3/15
  Fix for bar not toggling after monitor disconnect

29/11/14